@startuml
title ModHero — Model Component (Final CS2113-Compliant)

hide circle
hide stereotypes
skinparam monochrome true
skinparam shadowing false
skinparam classFontSize 14
skinparam classAttributeIconSize 0
skinparam ArrowColor black
skinparam ClassBorderColor black
skinparam ClassBackgroundColor white

' ===== CLASSES =====
class DataManager {
  - allMajorsData : Map<String, Major>
  - exemptedModules : List<String>
  + getTimetable() : Timetable
  + getAllMajorsData() : Map<String, Major>
  + getExemptedModules() : List<String>
}

class Timetable {
  - timetable : List<List<List<Module>>>
  + addModule(year:int, sem:int, module:Module, exempted:List<String>)
  + deleteModule(code:String, exempted:List<String>)
  + getAllModules() : List<Module>
  + clearTimetable()
}

class Module {
  - code : String
  - name : String
  - mc : int
  - type : String
  - preclude : String
}

class Prerequisites {
  - prereq : List<List<String>>
  + toFormatedString() : String
}

class Major {
  - name : String
  - abbrName : String
  + getName() : String
  + getAbbrName() : String
  + getMajorModules() : List<TimetableData>
}

class TimetableData {
  - code : String
  - year : int
  - term : int
  + getCode() : String
  + getYear() : int
  + getTerm() : int
}

' ===== RELATIONSHIPS =====
DataManager *-- Timetable : manages >
DataManager *-- Major : loads >
Timetable *-- Module : contains >
Module *-- Prerequisites : has >
Major *-- TimetableData : defines >
@enduml